--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
 body {
     background: #ebd58f
 }
-   p { 
+
+h1 {
     text-align: center }
 
-    em strong {
+p { 
+    text-align: center }
+
+#missao {
+    font-size: 20px }
+
+em strong {
      color: rgb(160, 7, 7) }
